--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -16,125 +16,132 @@
   </ul>
   <div class="tab-content" style="width:1200px;">
     <div class="tab-pane active" id="tab1">
-      <div class="well" style="width:1100px; height:480px">
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => "form-horizontal" }) do |f| %>
-  <% if resource.errors.any? %>
-  <div class="alert"><%= devise_error_messages! %></div>
-  <% end %>
+      <div class="well">
+        <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => "form-horizontal" }) do |f| %>
+        <% if resource.errors.any? %>
+          <div class="alert">
+            <%= devise_error_messages! %>
+          </div>
+        <% end %>
 
-  <% if I18n.locale==:en %>
+        <% if I18n.locale==:en %>
+          <div class="container">
 
-  <div class="container">
-    <% if I18n.locale==:en %>
-  <div class="control-group"><%= f.label :username, :class => "control-label" %>
-  <%= f.text_field :username, :placeholder => "Username", :style => "margin-left: 10px;" %></div>
+            <div class="control-group">
+              <%= f.label :username, :class => "control-label" %>
+              <%= f.text_field :username, :placeholder => "Username", :style => "margin-left: 10px;" %>
+            </div>
 
-  <div class="control-group"><%= f.label :email, :class => "control-label" %>
-  <%= f.email_field :email, :placeholder => "Example@example.com", :style => "margin-left: 10px;" %></div>
+            <div class="control-group">
+              <%= f.label :email, :class => "control-label" %>
+              <%= f.email_field :email, :placeholder => "Example@example.com", :style => "margin-left: 10px;" %>
+            </div>
 
-  <div class="control-group"><%= f.label :password, :class => "control-label" %>
-  <%= f.password_field :password, :placeholder => "Password", :style => "margin-left: 10px;" %><i>&nbsp;(leave blank if you don't want to change it)</i></div>
+            <div class="control-group">
+              <%= f.label :password, :class => "control-label" %>
+              <%= f.password_field :password, :placeholder => "Password", :style => "margin-left: 10px;" %><i>&nbsp;(leave blank if you don't want to change it)</i>
+            </div>
 
-  <div class="control-group"><%= f.label :password_confirmation, :class => "control-label" %>
-  <%= f.password_field :password_confirmation, :placeholder => "Confirm Password", :style => "margin-left: 10px;" %></div>
+            <div class="control-group">
+              <%= f.label :password_confirmation, :class => "control-label" %>
+              <%= f.password_field :password_confirmation, :placeholder => "Confirm Password", :style => "margin-left: 10px;" %>
+            </div>
 
-  <div><%= f.label :date_of_birth, :class => "control-label" %>
-    <%=  f.date_select :date_of_birth, {:start_year => Time.now.year,
-        :end_year => Time.now.year - 95}, :style => "margin-left: 10px;" %></div><br>
-         <div><%= f.label :gender, :class => "control-label" %>
-            <%= f.select(:gender,options_for_select(['male','female']),{}, :style => "margin-left: 10px;" ) %></div></br>
+            <div>
+              <%= f.label :date_of_birth, :class => "control-label" %>
+              <%=  f.date_select :date_of_birth, {:start_year => Time.now.year,
+                  :end_year => Time.now.year - 95}, :style => "margin-left: 10px;" %>
+            </div><br>
 
-  <div><%= f.label :country, :class => "control-label" %>
-        <span style="margin-left: 10px;">
-            <%= f.country_select :country, [ "Egypt", "Lebanon", "Jordan" ]%>
-        </span>
-    </div><br>
-
-  <div><%= f.label :education_level, :class => "control-label" %>
-    <%= f.select(:education_level, options_for_select(['','School','University','Graduate ']), {}, { :style => "margin-left: 10px;" }) %></br></div><br>
-
-  <div class="control-group"><%= f.label :current_password, :class => "control-label" %>
-  <%= f.password_field :current_password, :placeholder => "Current Password", :style => "margin-left: 10px;" %><i>&nbsp;(we need your current password to confirm your changes)</i></div>
-
-  <div><%= f.submit "Update", :class => "btn btn-success" %></div>
-
-  <% else I18n.locale==:ar %>
-    <div class="control-group"><%= f.label t(:username), :class => "control-label" %>
-  <%= f.text_field :username, :placeholder => "اسم المستخدم", :style => "margin-left: 10px;" %></div>
-
-  <div class="control-group"><%= f.label t(:email), :class => "control-label" %>
-  <%= f.email_field :email, :placeholder => "Example@example.com", :style => "margin-left: 10px;" %></div>
-
-  <div class="control-group"><%= f.label t(:password), :class => "control-label" %>
-  <%= f.password_field :password, :placeholder => "كلمة السر", :style => "margin-left: 10px;" %><i>&nbsp;(ضعها فارغة إذا لم تريد تغيرها)</i></div>
-
-  <div class="control-group"><%= f.label t(:password_confirmation), :class => "control-label" %>
-  <%= f.password_field :password_confirmation, :placeholder => "تأكيد كلمة السر", :style => "margin-left: 10px;" %></div>
-
-  <div><%= f.label t(:date_of_birth), :class => "control-label" %>
-    <%=  f.date_select :date_of_birth, {:start_year => Time.now.year,
-        :end_year => Time.now.year - 95}, :style => "margin-left: 10px;" %></div><br>
-
-        <div><%= f.label t(:gender), :class => "control-label" %>
-            <%= f.select(:gender,options_for_select(['ذكر','انثي']),{}, :style => "margin-left: 10px;" ) %></div></br>
-
-  <div><%= f.label t(:country), :class => "control-label" %>
-                <%= f.select(:country, options_for_select(['مصر','لبنان','الاردن','السعودية','ليبيا','الامارات','قطر','الكويت',
-                    'العراق','الجزأئر','المغرب','البحرين','موريتانيا','الصومال','السودان']), {},
-                {:style => "margin-left: 10px;" }) %>
+            <div>
+              <%= f.label :gender, :class => "control-label" %>
+              <%= f.select(:gender,options_for_select(['male','female']),{}, :style => "margin-left: 10px;" ) %>
             </div></br>
 
-  <div><%= f.label t(:education_level), :class => "control-label" %>
-            <%= f.select(:education_level, options_for_select(['','مدرسة','جامعة','خريج']), {}, { :style => "margin-left: 10px;" }) %></br></div><br>
+            <div>
+              <%= f.label :country, :class => "control-label" %>
+              <span style="margin-left: 10px;">
+                <%= f.country_select :country, [ "Egypt", "Lebanon", "Jordan" ]%>
+              </span>
+            </div><br>
 
-  <div class="control-group"><%= f.label t(:current_password), :class => "control-label" %>
+            <div>
+              <%= f.label :education_level, :class => "control-label" %>
+              <%= f.select(:education_level, options_for_select(['','School','University','Graduate ']), {}, { :style => "margin-left: 10px;" }) %></br>
+            </div><br>
 
-  <%= f.password_field :current_password, :placeholder => "كلمت السر الحالية", :style => "margin-left: 10px;" %><i>&nbsp;(نحتاج كلمة سرك الحالية لتأكيد التغيرات)</i></div>
+            <div class="control-group">
+              <%= f.label :current_password, :class => "control-label" %>
+              <%= f.password_field :current_password, :placeholder => "Current Password", :style => "margin-left: 10px;" %><i>&nbsp;(we need your current password to confirm your changes)</i>
+            </div>
 
-  <div><%= f.submit "تغيير", :class => "btn btn-success" %></div>
-  <% end %>
-</div>
-    <% else I18n.locale==:ar %>
+            <div>
+              <%= f.submit "Update", :class => "btn btn-success" %>
+            </div>
 
-    <div class="container">
-  <div class="control-group"><%= f.label t(:username), :class => "control-label" %>
-  <%= f.text_field :username, :placeholder => "اسم المستخدم", :style => "margin-left: 10px;" %></div>
+          </div>
+        <% else I18n.locale==:ar %>
+          <div class="container">
 
-  <div class="control-group"><%= f.label t(:email), :class => "control-label" %>
-  <%= f.email_field :email, :placeholder => "Example@example.com", :style => "margin-left: 10px;" %></div>
+            <div class="control-group">
+              <%= f.label t(:username), :class => "control-label" %>&nbsp;
+              <%= f.text_field :username, :placeholder => "اسم المستخدم", :style => "margin-left: 10px;" %>
+            </div>
 
-  <div class="control-group"><%= f.label t(:password), :class => "control-label" %>
-  <%= f.password_field :password, :placeholder => "كلمة السر", :style => "margin-left: 10px;" %><i>&nbsp;</i></div>
+            <div class="control-group">
+              <%= f.label t(:email), :class => "control-label" %>&nbsp;
+              <%= f.email_field :email, :placeholder => "Example@example.com", :style => "margin-left: 10px;" %>
+            </div>
 
-  <div class="control-group"><%= f.label t(:password_confirmation), :class => "control-label" %>
-  <%= f.password_field :password_confirmation, :placeholder => "تأكيد كلمة السر", :style => "margin-left: 10px;" %></div>
+            <div class="control-group">
+              <%= f.label t(:password), :class => "control-label" %>&nbsp;
+              <%= f.password_field :password, :placeholder => "كلمة السر", :style => "margin-left: 10px;" %><i>&nbsp;(إذا كنت لا تريد تغيير كلمة السر، اترك هذه المسافة فارغة)</i>
+            </div>
 
-  <div><%= f.label t(:date_of_birth), :class => "control-label" %>
-    <%=  f.date_select :date_of_birth, {:start_year => Time.now.year,
-        :end_year => Time.now.year - 95}, :style => "margin-left: 10px;" %></div><br>
+            <div class="control-group">
+              <%= f.label t(:password_confirmation), :class => "control-label" %>&nbsp;
+              <%= f.password_field :password_confirmation, :placeholder => "تأكيد كلمة السر", :style => "margin-left: 10px;" %>
+            </div>
 
-            <div><%= f.label t(:country), :class => "control-label" %>
-                <%= f.select(:country, options_for_select([['مصر','Egypt'],['لبنان','Lebanon'],
-                    ['الاردن','Jordan'],['السعودية','Saudi Arabia'],['ليبيا','Libya'],['الامارات','United Arab Emirates'],['قطر','Qatar'],['الكويت','Kuwait'],
-                    ['العراق','Iraq'],['الجزأئر','Algeria'],['المغرب','Morocco'],['البحرين','Bahrain'],
-                    ['موريتانيا','Mauritania'],['الصومال','Somalia'],['السودان','Sudan'],['تونس','Tunisia'],
-                    ['اخري','others']]), {},
-                {:style => "margin-left: 10px;" }) %>
+            <div>
+              <%= f.label t(:date_of_birth), :class => "control-label" %>&nbsp;
+              <%=  f.date_select :date_of_birth, {:start_year => Time.now.year,
+                :end_year => Time.now.year - 95}, :style => "margin-left: 10px;" %>
+            </div><br>
+
+            <div>
+              <%= f.label t(:country), :class => "control-label" %>&nbsp;
+              <%= f.select(:country, options_for_select([['مصر','Egypt'],['لبنان','Lebanon'],
+                            ['الاردن','Jordan'],['السعودية','Saudi Arabia'],['ليبيا','Libya'],['الامارات','United Arab Emirates'],['قطر','Qatar'],['الكويت','Kuwait'],
+                            ['العراق','Iraq'],['الجزأئر','Algeria'],['المغرب','Morocco'],['البحرين','Bahrain'],
+                            ['موريتانيا','Mauritania'],['الصومال','Somalia'],['السودان','Sudan'],['تونس','Tunisia'],
+                            ['اخري','others']]), {},
+                        {:style => "margin-left: 10px;" }) %>
             </div></br>
-            <div><%= f.label t(:gender), :class => "control-label" %>
-            <%= f.select(:gender,options_for_select([['ذكر','male'],['انثي','female']]),{}, :style => "margin-left: 10px;" ) %></div></br>
 
-  <div><%= f.label t(:education_level), :class => "control-label" %>
-            <%= f.select(:education_level, options_for_select(['',['مدرسة','School'],['جامعة','University'],
-            ['خريج','graduate']]), {}, { :style => "margin-left: 10px;" }) %></br></div><br>
+            <div>
+              <%= f.label t(:gender), :class => "control-label" %>&nbsp;
+              <%= f.select(:gender,options_for_select([['ذكر','male'],['انثي','female']]),{}, :style => "margin-left: 10px;" ) %>
+            </div></br>
 
-  <div class="control-group"><%= f.label t(:current_password), :class => "control-label" %>
-  <%= f.password_field :current_password, :placeholder => "كلمة السر الحالية", :style => "margin-left: 10px;" %><i>&nbsp;</i></div>
+            <div>
+              <%= f.label t(:education_level), :class => "control-label" %>&nbsp;
+              <%= f.select(:education_level, options_for_select(['',['مدرسة','School'],['جامعة','University'],
+                  ['خريج','graduate']]), {}, { :style => "margin-left: 10px;" }) %></br>
+            </div><br>
 
-  <div><%= f.submit "جدد", :class => "btn btn-success" %></div>
-</div>
-<% end %>
-    </div>
+            <div class="control-group">
+              <%= f.label t(:current_password), :class => "control-label" %>&nbsp;
+              <%= f.password_field :current_password, :placeholder => "كلمة السر الحالية", :style => "margin-left: 10px;" %><i>&nbsp;(نحتاج كلمة السر الحالية لتأكيد بياناتك)</i>
+            </div>
+
+            <div>
+              <%= f.submit "جدد", :class => "btn btn-success" %>
+            </div>
+            
+          </div>
+        <% end %>
+      </div>
     </div>
     <div class="tab-pane" id="tab2">
       <div class="well" style="width:1100px; height:480px; text-align:center; display:inline-block">
@@ -189,6 +196,7 @@
       <%end%>
     </br>
     </br>
+
 <% SubscriptionModel.all.each do |sm| %>
 
   <%if(developer.my_subscription)
