--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -202,13 +202,18 @@ function setButtons(){
   }
   
   function backToGame() {
+    <% if I18n.locale==:en %>
+    document.getElementById('gamenavtitle').innerHTML = "Game"
+    <% else %>
+    document.getElementById('gamenavtitle').innerHTML = "اللعبة"
+    <% end %>
     document.getElementById("zone").innerHTML = cache;
     cache = "";
     nav_locked = false;
   }
 
   function disableNav() {
-    $('#ingamenav').addClass('disabled');
+    $('.game-nav').css('display', 'none');
   }
 
   function show_menu_item(title)
@@ -227,7 +232,7 @@ function setButtons(){
   }
 
   function enableNav() {
-    $('#ingamenav').removeClass('disabled');
+    $('.game-nav').css('display', '');
   }
 
   // Author:
@@ -314,8 +319,8 @@ function setButtons(){
   <div class="game-nav" style="background-color: rgb(81, 104, 124); margin-bottom: -10px;">
     <% if current_gamer != nil %>
     <div class="btn-group" style="height: 66px;">
-       <button type="submit" id="ingamenav" class="btn btn-info dropdown-toggle" data-toggle="dropdown" href="#" style="width: 115px; height: 27px; border: medium none; margin-right: 15px; margin-top: 10px;"><i class="icon-align-justify"></i>
-        <span class="new" style="font-size :20px;"><%= t(:menu) %></span>
+       <button type="submit" id="ingamenav" class="btn btn-info dropdown-toggle" data-toggle="dropdown" href="#" style="width: 140px; height: 32px; border: medium none; margin-right: 15px; margin-top: 10px;"><i class="icon-align-justify"></i>
+        <span class="new" id="gamenavtitle" style="font-size :20px;"><%= t(:menu) %></span>
         
        </button>
         <center id="selected_item"></center>
@@ -347,8 +352,8 @@ function setButtons(){
    <div class="game-nav" style="background-color: rgb(81, 104, 124); margin-bottom: -10px;">
     <% if current_gamer != nil %>
     <div class="btn-group" style="height: 66px;">
-       <button type="submit" class="btn btn-info dropdown-toggle" data-toggle="dropdown" href="#" style="width : 115px; height: 27px; margin-top:15px; border: medium none; margin-left: 20px;"><i class="icon-align-justify"></i>
-        <span class="new" style="font-size :20px;"><%= t(:menu) %></span>
+       <button type="submit" id="ingamenav" class="btn btn-info dropdown-toggle" data-toggle="dropdown" href="#" style="width : 140px; height: 32px; margin-top:15px; border: medium none; margin-left: 20px;"><i class="icon-align-justify"></i>
+        <span class="new" id="gamenavtitle" style="font-size :20px;"><%= t(:menu) %></span>
         
        </button>
         <center id="selected_item"></center>
