added some more images

--- a/arability/app/views/pages/home.html.erb
+++ b/arability/app/views/pages/home.html.erb
@@ -213,9 +213,9 @@
           <img src="../assets/home_caro3.png" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1><%= t(:caro1h) %></h1>
-              <p class="lead"><%= t(:caro1b) %></p>
-              <a class="btn btn-primary arabicfont" href="#more"><%= t(:more) %></a>
+              <h1><%= t(:caro2h) %></h1>
+              <p class="lead"><%= t(:caro2b) %></p>
+              <a class="btn btn-primary arabicfont" href="<%= projects_path %>"><%= t(:moredevelopers) %></a>
             </div>
           </div>
         </div>
@@ -223,9 +223,9 @@
           <img src="../assets/home_caro2.png" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1><%= t(:caro1h) %></h1>
-              <p class="lead"><%= t(:caro1b) %></p>
-              <a class="btn btn-primary arabicfont" href="#more"><%= t(:more) %></a>
+              <h1><%= t(:caro2h) %></h1>
+              <p class="lead"><%= t(:caro2b) %></p>
+              <a class="btn btn-primary arabicfont" href="<%= projects_path %>"><%= t(:moredevelopers) %></a>
             </div>
           </div>
         </div>
