aligning all game buttons

--- a/arability/app/views/games/_halloffame.html.erb
+++ b/arability/app/views/games/_halloffame.html.erb
@@ -40,9 +40,9 @@
 
 <div style="display:block">
   <% if I18n.locale == :en %>
-    <a class="pull-right btn btn-success" style="padding: 5px; margin-right: 12px; margin-top: 28px;" onclick="backToGame()">Back to game</a>
+    <a class="pull-right btn btn-success" style="padding: 5px; margin-right: 12px; margin-top: 28px;" onclick="backToGame()">Game</a>
   <% else %>
-    <a class="pull-left btn btn-success" style="padding: 5px; margin-left: 28px; margin-top: 28px;" onclick="backToGame()">رجوع الى اللعبة</a>
+    <a class="pull-left btn btn-success" style="padding: 5px; margin-left: 28px; margin-top: 28px;" onclick="backToGame()">اللعبة</a>
   <% end %>  
 </div>
 
