--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -6,7 +6,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="/"><%= t(:arability) %></a>
+      <% if controller.request.path.include? "developers/" %>
+        <a href="/"><img class ="brand" src="/assets/logo-devs.png" source="/" alt="" style="height: 25px;"></a>
+      <% else %>
+        <a href="/"><img class ="brand" src="/assets/logol.png" source="/" alt="" style="height: 25px;"></a>
+      <% end %>
+      <!-- <a class="brand" href="/"><%= t(:arability) %></a> -->
       <div class="nav-collapse">
       <ul class="nav pull-right">
         <% if I18n.locale == :ar %>
