--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -108,7 +108,7 @@
 
 #skip_button{
   font-size:20px;
-  border-radius: 10px;
+  border-radius:10px;
   width:190px;
 }
 
@@ -123,6 +123,7 @@
   margin-bottom: 10px;
   height: 35px;
   font-size: 20px;
+  height:50px;
 }
 
 
