--- a/arability/app/views/pages/home.html.erb
+++ b/arability/app/views/pages/home.html.erb
@@ -210,12 +210,22 @@
           </div>
         </div>
         <div class="item">
+          <img src="../assets/home_caro4.png" alt="">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1><%= t(:caro4h) %></h1>
+              <p class="lead"><%= t(:caro4b) %></p>
+              <a class="btn btn-primary arabicfont" href="<%= game_path %>"><%= t(:play) %></a>
+            </div>
+          </div>
+        </div>
+        <div class="item">
           <img src="../assets/home_caro3.png" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1><%= t(:caro2h) %></h1>
-              <p class="lead"><%= t(:caro2b) %></p>
-              <a class="btn btn-primary arabicfont" href="<%= projects_path %>"><%= t(:moredevelopers) %></a>
+              <h1><%= t(:caro3h) %></h1>
+              <p class="lead"><%= t(:caro3b) %></p>
+              <a class="btn btn-primary arabicfont" href="<%= search_path %>"><%= t(:moresearch) %></a>
             </div>
           </div>
         </div>
