--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -7,9 +7,9 @@
         <span class="icon-bar"></span>
       </a>
       <% if controller.request.path.include? "developers/" %>
-        <a href="/"><img class ="brand" src="/assets/logo-devs.png" source="/" alt="" style="height: 25px;"></a>
+        <a href="/"><img class ="brand" src="/assets/logo-devs.png" alt="" style="height: 25px;"></a>
       <% else %>
-        <a href="/"><img class ="brand" src="/assets/logol.png" source="/" alt="" style="height: 25px;"></a>
+        <a href="/"><img class ="brand" src="/assets/logol.png" alt="" style="height: 25px;"></a>
       <% end %>
       <!-- <a class="brand" href="/"><%= t(:arability) %></a> -->
       <div class="nav-collapse">
@@ -73,7 +73,12 @@
         <% if path.include? "developers/" %>
           <li><%= link_to t(:game), game_path %></li>
         <% else %>
-          <li><%= link_to t(:backend), backend_home_path %></li>
+          <% if path.include? "game" %>
+            <li><%= link_to t(:backend), backend_home_path %></li>
+          <% else %>
+            <li><%= link_to t(:game), game_path %></li>
+            <li><%= link_to t(:backend), backend_home_path %></li>
+          <% end %>
         <% end %>
         <% if I18n.locale==:en %>
         <% if current_gamer.try(:admin?) %>
