[Issue #363] changed the api

--- a/arability/app/views/api/help.html.erb
+++ b/arability/app/views/api/help.html.erb
@@ -47,6 +47,11 @@ keyword you are trying to translate in the database you should always have the t
 translated the usual way so that the user will not see english content in the arabic page
 </p>
 
+<p>
+If the keyword does not exist in the database it is automatically added so that our gamers can vote
+on it and it will appear to your users once gamers have voted on it.
+</p>
+
 <h3>Available overrides</h3>
 <p>If no overrides are specified the constraints of the asociated project would be used
 or no constraints would be applied at all</p>
