fixed arabic text

--- a/arability/app/views/pages/home.html.erb
+++ b/arability/app/views/pages/home.html.erb
@@ -287,7 +287,7 @@
       <hr class="featurette-divider">
 
       <div class="featurette"  id="more">
-        <img class="featurette-image pull-right" src="../assets/gear.png">
+        <img class="featurette-image pull-right" src="../assets/gear-hi.png">
         <h2 class="featurette-heading"><%= t(:backend) %></h2>
         <p class="lead"> <span class="muted"><%= t(:featdevh1) %></span><br><%= t(:featdevb1) %></p>
         <p class="lead"> <span class="muted"><%= t(:featdevh2) %></span><br><%= t(:featdevb2) %></p>
