--- a/arability/app/views/devise/registrations/new.html.erb
+++ b/arability/app/views/devise/registrations/new.html.erb
@@ -52,10 +52,10 @@
 
         <div><%= f.label t(:education_level), :class => "control-label" %>
         <% if I18n.locale == :ar %>
-            <%= f.select(:education_level, options_for_select(['',['مدرسة','School'],['جامعة','University'],
+            <%= f.select(:education_level, options_for_select([['مدرسة','School'],['جامعة','University'],
             ['خريج','Graduate']]), {}, { :style => "margin-left: 10px;" }) %></br></div>
         <% else %>
-            <%= f.select(:education_level, options_for_select(['','School','University','Graduate']), {}, { :style => "margin-left: 10px;" }) %></br></div>
+            <%= f.select(:education_level, options_for_select(['School','University','Graduate']), {}, { :style => "margin-left: 10px;" }) %></br></div>
         <% end %>
 
 
